# nodb_fastapi

./: Dockerfile  pyproject.toml
.github/workflows/: ci.yml
nodb_fastapi/: main.py  settings.py
tests/: test_status.py
