[tool.poetry]
name = "nodb-fastapi"
version = "0.1.0"
description = ""
authors = ["Mstsislau <mr.chadway@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
pydantic-settings = "^2.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
httpx = "^0.26.0"
mypy = "^1.8.0"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
